# flowdesk-agent

./: .gitignore  README.md  evaluation_report.json  main.py  pyproject.toml
app/: agent.py  config.py  llm.py
app/api/: routes.py
app/db/: sqlite_manager.py
app/graph/: graph.py  nodes.py  state.py
app/rag/: ingest.py  retriever.py
app/tools/: tools.py
data/: example-queries.json  flowdesk.db
data/chroma_db/: chroma.sqlite3
data/docs/: billing-refund-policy.md  dashboard-known-issues.md  export-limits-v2.md  export-limits-v3.md  release-notes-v3.1.md  release-notes-v3.2.md  sso-setup-v2.md  sso-setup-v3.md  system-override.md  webhook-troubleshooting.md
tests/: test_queries.py
